Añadir funcionalidad de búsqueda de productos y resaltar resultados; incluir script de buscador en index.html

--- a/index.html
+++ b/index.html
@@ -216,5 +216,6 @@
     <!-- Scripts -->
     <script src="./assets/js/script.js"></script>
     <script src="./assets/js/cargaproductos.js"></script>
+    <script src="./assets/js/buscador.js"></script>
   </body>
 </html>
